Fixed urlbar issue with address
Long web addresses would push the sites name out of view. A max width of 50% was put on the url bar search result address to resolve this

--- a/userChrome.css
+++ b/userChrome.css
@@ -159,6 +159,7 @@ padding-top: 1px;
 /* Url bar text color */
 .urlbarView-url {
 	color: #004953 !important;
+	max-width: 50%;
 }
 
 .urlbarView-row:not([type="tip"], [type="dynamic"])[selected] > .urlbarView-row-inner, .urlbarView-row-inner[selected] {
